--- a/public/payments.html
+++ b/public/payments.html
@@ -1,127 +1,211 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8"/>
   <title>Payments</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-    body{font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif; margin:20px;}
-    h1{margin:0 0 12px}
-    form,table{max-width:1000px}
-    label{display:block;margin:8px 0 4px}
-    input,select,textarea{width:100%;padding:8px;border:1px solid #ccc;border-radius:8px}
-    button{padding:8px 12px;border:1px solid #333;background:#111;color:#fff;border-radius:8px;cursor:pointer}
-    button.secondary{background:#fff;color:#111}
-    table{width:100%;border-collapse:collapse;margin-top:16px}
-    th,td{border-bottom:1px solid #eee;padding:8px;text-align:left}
-    .row-actions{display:flex;gap:6px;flex-wrap:wrap}
-    .two{display:grid;grid-template-columns:repeat(2,1fr);gap:12px}
+    body{font-family:system-ui,Arial,sans-serif;margin:20px}
+    .nav{margin-bottom:16px}
+    .nav a{text-decoration:none;padding:6px 10px;border:1px solid #ccc;border-radius:6px;background:#f7f7f7}
+    .toolbar{display:flex;gap:8px;align-items:center;margin:8px 0 16px}
+    .toolbar button{padding:6px 10px}
+    form input, form select, form button, form label{padding:8px;margin:4px 6px 4px 0}
+    table{border-collapse:collapse;width:100%;margin-top:10px}
+    th, td{border:1px solid #ddd;padding:8px;text-align:left}
+    .right{text-align:right}
+    .badge{display:inline-block;padding:2px 6px;border-radius:10px;background:#eef}
+    .badge.nt{background:#efe}
   </style>
 </head>
 <body>
+  <div class="nav"><a href="index.html">⬅ Back to Main</a></div>
   <h1>Payments</h1>
 
+  <div class="toolbar">
+    <button id="settingsBtn">⚙️ Receipt Settings</button>
+    <span class="small" style="color:#666">Configure dojo name/address for receipts.</span>
+  </div>
+
   <form id="payForm">
-    <div class="two">
-      <div>
-        <label>Student</label>
-        <select name="student_id" id="studentSelect" required></select>
-      </div>
-      <div>
-        <label>Amount (USD)</label>
-        <input name="amount" type="number" step="0.01" min="0" required>
-      </div>
-      <div>
-        <label>Method</label>
-        <input name="method" placeholder="cash / card / e-transfer">
-      </div>
-      <div>
-        <label>Taxable?</label>
-        <select name="taxable">
-          <option value="1" selected>Yes (Taxable)</option>
-          <option value="0">No (Non-Taxable)</option>
-        </select>
-      </div>
-      <div style="grid-column:1/-1">
-        <label>Note</label>
-        <input name="note" placeholder="membership / gear / etc.">
-      </div>
-    </div>
-    <div style="margin-top:10px"><button type="submit">Record Payment</button></div>
+    <input type="date" name="date" id="date">
+    <select name="student_id" id="studentSelect">
+      <option value="">(No student)</option>
+    </select>
+    <input type="number" name="amount" step="0.01" placeholder="Amount" required>
+    <input name="method" placeholder="Method (cash, card, etc.)">
+    <label><input type="checkbox" name="taxable" checked> Taxable</label>
+    <input name="note" placeholder="Note">
+    <button type="submit">Add Payment</button>
   </form>
 
-  <table id="payTable">
-    <thead><tr>
-      <th>ID</th><th>Date</th><th>Student</th><th>Amount</th><th>Method</th><th>Taxable</th><th>Note</th><th>Actions</th>
-    </tr></thead>
+  <table id="tbl">
+    <thead>
+      <tr>
+        <th>ID</th><th>Date</th><th>Student</th><th class="right">Amount</th><th>Method</th><th>Tax</th><th>Note</th><th>Actions</th>
+      </tr>
+    </thead>
     <tbody></tbody>
   </table>
 
 <script>
-const $ = sel => document.querySelector(sel);
+const RECEIPT_KEY = 'dojo_receipt_settings'; // stored in localStorage
+function defaultSettings(){
+  return {
+    dojoName: 'Illyrian MMA Dojo',
+    dojoAddress: '123 Training Way, City, ST',
+    dojoPhone: '(555) 555-5555'
+  };
+}
+function getSettings(){
+  try { return JSON.parse(localStorage.getItem(RECEIPT_KEY)) || defaultSettings(); }
+  catch { return defaultSettings(); }
+}
+function setSettings(s){ localStorage.setItem(RECEIPT_KEY, JSON.stringify(s)); }
+
+document.getElementById('settingsBtn').addEventListener('click', ()=>{
+  const s = getSettings();
+  const name = prompt('Dojo Name', s.dojoName); if (name===null) return;
+  const addr = prompt('Dojo Address', s.dojoAddress); if (addr===null) return;
+  const phone = prompt('Dojo Phone', s.dojoPhone); if (phone===null) return;
+  setSettings({ dojoName:name, dojoAddress:addr, dojoPhone:phone });
+  alert('Saved.');
+});
+
+function todayISO(){ return new Date().toISOString().slice(0,10); }
+
+async function fetchJSON(url, opts){
+  const r = await fetch(url, opts);
+  const t = await r.text();
+  try { return JSON.parse(t); } catch { return { ok:false, error:'Invalid JSON', raw:t }; }
+}
+
+let studentMap = new Map(); // id -> name
 
 async function loadStudents(){
-  const res = await fetch('/api/students'); const rows = await res.json();
-  const sel = $('#studentSelect'); sel.innerHTML = '';
-  for(const r of rows){
-    const o = document.createElement('option');
-    o.value = r.id; o.textContent = `${r.name} (#${r.id})`;
-    sel.appendChild(o);
+  const res = await fetchJSON('/api/students');
+  const sel = document.getElementById('studentSelect');
+  sel.innerHTML = `<option value="">(No student)</option>`;
+  studentMap = new Map();
+  if (res.ok){
+    for (const s of res.students){
+      studentMap.set(String(s.id), s.name);
+      const opt = document.createElement('option');
+      opt.value = s.id; opt.textContent = `#${s.id} – ${s.name}`;
+      sel.appendChild(opt);
+    }
   }
 }
 
+function fmt(x){ return Number(x||0).toFixed(2); }
+
 async function loadPayments(){
-  const res = await fetch('/api/payments'); const rows = await res.json();
-  const tb = $('#payTable tbody'); tb.innerHTML = '';
-  for(const r of rows){
+  const tb = document.querySelector('#tbl tbody');
+  tb.innerHTML = '<tr><td colspan="8">Loading…</td></tr>';
+  const data = await fetchJSON('/api/payments');
+  if (!data.ok){ tb.innerHTML = `<tr><td colspan="8">Error: ${data.error||data.raw}</td></tr>`; return; }
+  tb.innerHTML = '';
+  for (const p of data.payments){
     const tr = document.createElement('tr');
+    const sname = p.student_id ? (studentMap.get(String(p.student_id)) || `#${p.student_id}`) : '';
     tr.innerHTML = `
-      <td>${r.id}</td>
-      <td>${r.created_at||''}</td>
-      <td>${r.student_name || '—'}</td>
-      <td>$${Number(r.amount).toFixed(2)}</td>
-      <td>${r.method||''}</td>
-      <td>${r.taxable ? 'Taxable' : 'Non-Taxable'}</td>
-      <td>${r.note||''}</td>
-      <td class="row-actions">
-        <button data-act="receipt" data-id="${r.id}">Receipt</button>
-        <button data-act="delete" data-id="${r.id}" class="secondary">Delete</button>
-      </td>
+      <td>${p.id}</td>
+      <td>${p.date||''}</td>
+      <td>${sname||''}</td>
+      <td class="right">${fmt(p.amount)}</td>
+      <td>${p.method||''}</td>
+      <td>${Number(p.taxable)?'<span class="badge">Taxable</span>':'<span class="badge nt">Non-Tax</span>'}</td>
+      <td>${p.note||''}</td>
+      <td><button data-print="${p.id}">🖨️ Print</button></td>
     `;
+    tr.dataset.row = JSON.stringify(p);
     tb.appendChild(tr);
   }
 }
 
-$('#payForm').addEventListener('submit', async (e)=>{
+function buildReceiptHTML(pay, studentName){
+  const s = getSettings();
+  return `<!doctype html>
+<html>
+<head>
+<meta charset="utf-8"/>
+<title>Receipt #${pay.id}</title>
+<style>
+  body{font-family:system-ui,Arial,sans-serif;margin:20px}
+  .hdr{text-align:center;margin-bottom:10px}
+  .hdr h2{margin:0}
+  .box{border:1px solid #000;padding:12px}
+  table{width:100%;border-collapse:collapse;margin-top:10px}
+  th,td{border:1px solid #000;padding:6px;text-align:left}
+  .right{text-align:right}
+  @media print {
+    button{display:none}
+    body{margin:0}
+  }
+</style>
+</head>
+<body>
+  <div class="hdr">
+    <h2>${s.dojoName}</h2>
+    <div>${s.dojoAddress}</div>
+    <div>${s.dojoPhone}</div>
+  </div>
+  <div class="box">
+    <div><b>Receipt #:</b> ${pay.id}</div>
+    <div><b>Date:</b> ${pay.date || ''}</div>
+    <div><b>Student:</b> ${studentName || ''}</div>
+    <div><b>Method:</b> ${pay.method || ''}</div>
+  </div>
+  <table>
+    <thead><tr><th>Description</th><th class="right">Amount (USD)</th></tr></thead>
+    <tbody>
+      <tr><td>${pay.note || 'Payment'}</td><td class="right">${Number(pay.amount).toFixed(2)}</td></tr>
+    </tbody>
+    <tfoot>
+      <tr><th>Total</th><th class="right">${Number(pay.amount).toFixed(2)}</th></tr>
+    </tfoot>
+  </table>
+  <p>Tax status: ${Number(pay.taxable)?'Taxable':'Non-Taxable'}</p>
+  <button onclick="window.print()">Print</button>
+</body>
+</html>`;
+}
+
+document.querySelector('#tbl').addEventListener('click', (e)=>{
+  const id = e.target?.dataset?.print;
+  if (!id) return;
+  const tr = e.target.closest('tr');
+  const pay = JSON.parse(tr.dataset.row);
+  const studentName = pay.student_id ? (studentMap.get(String(pay.student_id)) || `#${pay.student_id}`) : '';
+  const html = buildReceiptHTML(pay, studentName);
+  const w = window.open('', '_blank', 'width=520,height=720');
+  w.document.open(); w.document.write(html); w.document.close();
+  // auto print shortly after open
+  setTimeout(()=>{ try{ w.focus(); w.print(); }catch{} }, 300);
+});
+
+// form submit
+document.getElementById('payForm').addEventListener('submit', async (e)=>{
   e.preventDefault();
   const fd = new FormData(e.target);
+  // default date if empty
+  if (!fd.get('date')) fd.set('date', todayISO());
+  // checkbox normalization
+  fd.set('taxable', fd.get('taxable') ? 1 : 0);
   const body = Object.fromEntries(fd.entries());
-  body.amount = parseFloat(body.amount || "0");
-  body.taxable = body.taxable === "1" ? 1 : 0;
-  const res = await fetch('/api/payments',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(body)});
-  if(!res.ok){ alert('Save failed'); return; }
+  const res = await fetchJSON('/api/payments', {
+    method:'POST',
+    headers:{'Content-Type':'application/json'},
+    body: JSON.stringify(body)
+  });
+  if (!res.ok){ alert('Error: ' + res.error); return; }
   e.target.reset();
-  await loadPayments();
+  document.getElementById('date').value = todayISO();
+  loadPayments();
 });
 
-$('#payTable').addEventListener('click', async (e)=>{
-  const btn = e.target.closest('button'); if(!btn) return;
-  const id = btn.dataset.id; const act = btn.dataset.act;
-
-  if(act==='delete'){
-    if(!confirm(`Delete payment #${id}?`)) return;
-    const res = await fetch(`/api/payments/${id}`,{method:'DELETE'});
-    if(!res.ok) return alert('Delete failed');
-    return loadPayments();
-  }
-
-  if(act==='receipt'){
-    window.open(`/receipt/${id}`, '_blank');
-  }
-});
-
-loadStudents();
-loadPayments();
+// init
+document.getElementById('date').value = todayISO();
+(async ()=>{ await loadStudents(); await loadPayments(); })();
 </script>
 </body>
 </html>
